Stop preview images from stretching

--- a/src/www/styles.less
+++ b/src/www/styles.less
@@ -289,6 +289,8 @@ code {
             height: 100%;
             border: none;
             box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.5);
+            object-fit: contain;
+            background-color: #282a2c; // Matches the background color of Google's image viewer
         }
 
         .hidden {
